<resources>
    <string name="app_name">Quick!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Quick!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_subscribed">Tracked successfully</string>
    <string name="msg_subscribe_failed">Failed to track place</string>
    <string name="msg_unsubscribed">Removed tracking successfully</string>
    <string name="msg_unsubscribe_failed">Failed to remove tracking</string>
    <string name="hostUrl">https://aesuneus.000webhostapp.com/qservice.php</string>
    <string name="nav_browse">Browse</string>
    <string name="nav_tracking">Tracking</string>
    <string name="nav_map">Map</string>
    <string name="last_updated">Last updated:</string>
    <string name="open_text">Open</string>
    <string name="closed_text">Closed</string>
    <string name="address">Address</string>
    <string name="premise_name">Premise Name</string>
    <string name="premise_information">Premise Information</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="fullday">24 hours</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="percentagePlaceholder">100%</string>
    <string name="current_occupancy">Current Occupancy:</string>
    <string name="max">Max:</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="charts_below_are_made_by_analysing_last_30_days_of_occupancy_data">Charts below are made by analysing last 30 days of occupancy data.</string>
    <string name="track">Track</string>
</resources>
