<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaceInfoActivity">

    <RelativeLayout
        android:id="@+id/placeInfoRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarInfo"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="329dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapViewInfo"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/premise_information"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/premiseNameInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:ems="10"
                        android:hint="@string/premise_name"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/addressInfo"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/address"
                        android:importantForAutofill="no" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="12dp">

                            <TextView
                                android:id="@+id/openStatusInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/closed_text"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                card_view:layout_constraintBottom_toBottomOf="@+id/occupancyCircular"
                                card_view:layout_constraintHorizontal_bias="0.51"
                                card_view:layout_constraintTop_toTopOf="@+id/occupancyCircular" />

                            <TextView
                                android:id="@+id/percentageInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="76dp"
                                android:text="@string/percentagePlaceholder"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintHorizontal_bias="0.503"
                                card_view:layout_constraintStart_toStartOf="parent"
                                card_view:layout_constraintTop_toBottomOf="@+id/openStatusInfo"
                                card_view:layout_constraintVertical_bias="0.0" />

                            <ProgressBar
                                android:id="@+id/occupancyCircular"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="200dp"
                                android:layout_height="200dp"
                                android:indeterminate="false"
                                android:max="100"
                                android:progress="100"
                                android:progressDrawable="@drawable/occupancy_progress"
                                android:progressTint="@color/occupancyRed"
                                card_view:layout_constraintBottom_toBottomOf="parent"
                                card_view:layout_constraintEnd_toEndOf="parent"
                                card_view:layout_constraintStart_toStartOf="parent"
                                card_view:layout_constraintTop_toTopOf="parent" />

                        </android.support.constraint.ConstraintLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="12dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/currentOccupancyInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/current_occupancy" />

                            <TextView
                                android:id="@+id/maxOccupancyInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/max" />

                            <TextView
                                android:id="@+id/lastUpdatedInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/last_updated" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/opening_hours"
                        android:textColor="#000000" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/tuesday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/friday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/thursday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/wednesday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/saturday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/monday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour0"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:text="@string/sunday"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/openingHour6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fullday"
                            android:textAlignment="viewEnd"
                            android:textColor="#000000" />

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/trendChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>